tests/baselines/reference/moduleWithValuesAsType.errors.txt
moduleWithValuesAsType.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleWithValuesAsType.ts(5,8): error TS2709: Cannot use namespace 'A' as a type.


==== moduleWithValuesAsType.ts (2 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var b = 1;
    }
    
    var a: A; // no error
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.